# recipes_management

./: Cargo.toml
migrations/2022-06-14-010520_create_recipe/: down.sql  up.sql
migrations/2022-06-14-010605_create_schedule/: down.sql  up.sql
migrations/2022-06-14-123625_create_ingredients/: down.sql  up.sql
migrations/2022-06-14-124816_create_measurements/: down.sql  up.sql
migrations/2022-06-14-144040_create_recipe_ingredients/: down.sql  up.sql
migrations/2022-07-02-070822_add_amount_to_schedule/: down.sql  up.sql
migrations/2022-07-04-054442_create_product/: up.sql
src/: main.rs  schema.rs
src/controllers/: ingredients_controller.rs  measurements_controller.rs  mod.rs  planner_controller.rs  recipes_controller.rs  schedules_controller.rs
src/models/: ingredient.rs  measurement.rs  mod.rs  planner.rs  product.rs  recipe.rs  recipe_ingredient.rs  schedule.rs
src/services/: ingredients_services.rs  measurements_services.rs  mod.rs  recipes_services.rs  schedules_services.rs
